tests/sema/bad/25_return_type_mismatch.sg
fn wrong_bool() -> float {
  return 1 == 2;
}

fn missing_value() -> int {
  return;
}
